<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/llupload"
    >

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:orientation="vertical"
        android:background="#ffffff">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_term_cond"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size_normal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_normal"
        android:orientation="horizontal">


       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="1."
           android:textSize="@dimen/txt_size_normal"
           android:textColor="@color/black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term1"
            android:paddingLeft="@dimen/margin_v_small"
            />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_medium"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2."
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size_normal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/term2"
                android:textSize="@dimen/txt_size_normal"
                android:paddingLeft="@dimen/margin_v_small"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_medium"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3."
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size_normal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/term3"
                android:textSize="@dimen/txt_size_normal"
                android:paddingLeft="@dimen/margin_v_small"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_medium"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4."
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size_normal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/term4"
                android:textSize="@dimen/txt_size_normal"
                android:paddingLeft="@dimen/margin_v_small"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_medium"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5."
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size_normal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/term5"
                android:textSize="@dimen/txt_size_normal"
                android:paddingLeft="@dimen/margin_v_small"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_medium"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6."
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size_normal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/term6"
                android:textSize="@dimen/txt_size_normal"
                android:paddingLeft="@dimen/margin_v_small"
                />
        </LinearLayout>


    </LinearLayout>
</ScrollView>

    <ImageView
        android:id="@+id/cross"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_action_close"


        />

</RelativeLayout>