<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".business.fragment.TestimonialFragment">

    <!--Title text-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_size_normal"
            android:text="@string/testimonial"/>
    </LinearLayout>

    <!--Layout for content-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_40dp"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size_normal">

        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_bg_box_black_border"
            android:maxLines="10"
            android:minLines="5"
            android:padding="@dimen/txt_size_vv_small"
            android:layout_gravity="top"
            android:text="kdjfsdlkf"
            android:gravity="top"
            android:layout_marginTop="@dimen/margin_small"
            android:id="@+id/testimonial_frag_txt_detail">

        </EditText>

    </LinearLayout>

    <!--button Submit-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_submit"
        android:layout_marginTop="@dimen/margin_40dp"
        android:layout_marginLeft="@dimen/margin_medium"
        android:id="@+id/testimonial_frag_btn_submit"
        android:textColor="@color/white"></Button>

</LinearLayout>